--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/style.css" />
-    <script src="js/script.js"></script>
     <title>Loop Studios</title>
   </head>
   <body>
@@ -71,7 +70,7 @@
         </nav>
 
         <!--  Mobile menu -->
-        <div id="menu" class="absolute top-0 bottom-0 left-0  flex-col
+        <div id="menu" class=" absolute top-0 bottom-0 left-0  flex-col items-center
         self-end hidden w-full m-h-screen py-1 pt-40
         pl-12 space-y-3 text-lg text-white uppercase
         bg-black">
@@ -429,5 +428,6 @@
         </div>
       </div>
     </footer>
+    <script src="js/script.js"></script>
   </body>
 </html>
