--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </div>
           </div>
 
-          <!--  Hamburger Menu -->
+          <!--  Hamburger Button -->
            <div class="md:hidden">
             <button class="z-40  block hamburger
             md:hidden focus:outline-none" id="menu-btn" type="button">
